--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="skill-row">
         <img class="" src="images/search.png" alt="bug-tracking">
         <h3>Bug Tracking</h3>
-        <p>After finding an issue, I can create a report in Jira and specify all important details like Steps to reproduce, Expected and Actual result, Test environment, Severity etc.  </p>
+        <p>After finding an issue, I can create a report in Jira and specify all important details like Steps to reproduce bugs, Expected and Actual result, Test environment, Severity etc.  </p>
       </div>
       <div class="skill-row">
         <img class="" src="images/css-file.png" alt="cssfile">
